# zython-syntaxer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile
.PVS-Studio/: depend_info.json
.github/workflows/: deploy-docs.yml
doc/html/: annotated.html  arifm__tree_8cppm.html  bor_8cppm.html  class_arifm_tree-members.html  class_arifm_tree.html  class_bor-members.html  class_bor.html  class_lexem-members.html  class_lexem.html  class_lexer-members.html  class_lexer.html  class_syntax_validator-members.html  class_syntax_validator.html  class_tid-members.html  class_tid.html  classes.html  dir_4f82dfcd9404da3e20bb4e69ba3b9d11.html  dir_664c1dcf6fa4ccb18754ae0e6d0afc19.html  dir_aa7fdcee03895345beba83d0db7d6bfb.html  dir_b9e192a35990a501fe25659a8c9295c9.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_dc9e1e299a0b26f222fe6c0a872463f0.html  examples_2main_8cpp.html  extern_2lexer_2examples_2main_8cpp.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  lexem_8cppm.html  lexer_8cppm.html  module__arifm__tree.html  module__bor.html  module__lexem.html  module__lexer.html  module__syntaxer.html  module__tid.html  (+11 more)
docs/html/: annotated.html  arifm__tree_8cppm.html  bor_8cppm.html  class_arifm_tree-members.html  class_arifm_tree.html  class_bor-members.html  class_bor.html  class_tid.html  (+47 more)
dst/: intrisics.txt
examples/: CMakeLists.txt  huy.txt  main.cpp  token.txt
import/: arifm_tree.cppm  ast_builder.cppm  codegen.cppm  syntaxer.cppm  tid.cppm
(+63 files in other folders)
